# Libtorch_Comprehensive_Learning

./: .gitignore  README.md
week1/: CMakeLists.txt  autograd.cpp  autograd2.cpp  main.cpp  simple_sequential_nn.cpp  tensor_operations.cpp  tensor_operations_2.cpp  tensor_operations_3.cpp
week2/: CMakeLists.txt  custom_module_nn.cpp  custom_module_nn2.cpp
week2/capstone_project_1/vision_pipeline/: CMakeLists.txt
week2/capstone_project_1/vision_pipeline/include/: NeuralBrain.h  Sensor.h  ThreadQueue.h
week2/capstone_project_1/vision_pipeline/src/: NeuralBrain.cpp  Sensor.cpp  main.cpp
